tests/ui/abi/cannot-be-called.msp430.stderr
error[E0570]: "avr-interrupt" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:40:8
   |
LL | extern "avr-interrupt" fn avr() {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-m" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:42:8
   |
LL | extern "riscv-interrupt-m" fn riscv_m() {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-s" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:44:8
   |
LL | extern "riscv-interrupt-s" fn riscv_s() {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: "x86-interrupt" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:46:8
   |
LL | extern "x86-interrupt" fn x86() {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: "avr-interrupt" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:71:22
   |
LL | fn avr_ptr(f: extern "avr-interrupt" fn()) {
   |                      ^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-m" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:77:26
   |
LL | fn riscv_m_ptr(f: extern "riscv-interrupt-m" fn()) {
   |                          ^^^^^^^^^^^^^^^^^^^

error[E0570]: "riscv-interrupt-s" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:83:26
   |
LL | fn riscv_s_ptr(f: extern "riscv-interrupt-s" fn()) {
   |                          ^^^^^^^^^^^^^^^^^^^

error[E0570]: "x86-interrupt" is not a supported ABI for the current target
  --> $DIR/cannot-be-called.rs:89:22
   |
LL | fn x86_ptr(f: extern "x86-interrupt" fn()) {
   |                      ^^^^^^^^^^^^^^^

error: functions with the "msp430-interrupt" ABI cannot be called
  --> $DIR/cannot-be-called.rs:51:5
   |
LL |     msp430();
   |     ^^^^^^^^
   |
note: an `extern "msp430-interrupt"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:51:5
   |
LL |     msp430();
   |     ^^^^^^^^

error: functions with the "msp430-interrupt" ABI cannot be called
  --> $DIR/cannot-be-called.rs:67:5
   |
LL |     f()
   |     ^^^
   |
note: an `extern "msp430-interrupt"` function can only be called using inline assembly
  --> $DIR/cannot-be-called.rs:67:5
   |
LL |     f()
   |     ^^^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0570`.
